--- a/UI/DashBoard_UI/Properties/Resources.resx
+++ b/UI/DashBoard_UI/Properties/Resources.resx
@@ -118,11 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="49602_freight_packing_products_shipment_trucking_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\49602_freight_packing_products_shipment_trucking_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="1814114_help_question_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1814114_help_question_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="1218712_customers_group_team_user_user group_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1218712_customers_group_team_user_user group_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -130,10 +127,22 @@
   <data name="2332026" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2332026.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="49602_freight_packing_products_shipment_trucking_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\49602_freight_packing_products_shipment_trucking_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="293-2933613_employee-icon-png" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\293-2933613_employee-icon-png.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="49615_reports_report_documents_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\49615_reports_report_documents_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3669173_help_ic_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3669173_help_ic_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="1814114_help_question_icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1814114_help_question_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
